--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <h1 class="text-center text-success">Esercizio 6</h1>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 col-lg-6  p-3 mb-2 bg-black text-white text-center"><p><a href="#" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">colonna 1</a></p>
+            <div class="col-12 col-lg-6 p-3 mb-2 bg-black text-white text-center">colonna 1</a></p>
             </div>
-            <div class="col-12 col-lg-6  p-3 mb-2 bg-black text-white text-center"><p><a href="#" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">colonna 2</a></p>
+            <div class="col-12 col-lg-6  offset-md-2  p-3 mb-2 bg-black text-white text-center"><p><a href="#" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">colonna 2</a></p>
             </div>
         </div>
     </div>
